# Minimalist-robots-RBNs

./: .gitignore  README.md  main.py
installation_folder/: first_build.sh  install_argos.sh  install_kilobot_plugin.sh
scripts/: GeneticAlgorithm.py  fpt_evaluation.py  io_scripts.py  log_script.py  network_behaviour_analysis.py  post_evaluation.py  utils.py
simulation_config/: 0000000simulation_parameters.argos  sim_config.xml  simulation_parameters.argos  simulation_parameters_bias.argos  simulation_parameters_encoded.argos  simulation_parameters_new_encode.argos  simulation_parameters_viz.argos
src/: ArgosSimulation.py  CMakeLists.txt  KilobotsSearchExperiment.py
src/behaviors/: CMakeLists.txt  kilobot_rbn.c  kilobot_rbn_encoded.c  kilobot_rbn_new_encode.c
src/kilobots/: Makefile  kilolib.h  ohc.c
src/loop_functions/: ci_kilobot_loop_functions.cpp  ci_kilobot_loop_functions.h
src/utils/: BooleanNetwork.py
